Modify output message.

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,7 @@ TARGET = arpspoof
 
 arpspoof: arpspoof.c
 	$(CC) arpspoof.c -o $(TARGET) $(LIBS) $(CFLAGS)
+	strip $(TARGET)
 
 clean:
 	rm $(TARGET)
