use pcap instead of arpcache lookup to get MAC address.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,14 @@
-CFLAGS = -Wall
-LIBS = -lnet
+CFLAGS = -Wall -O2
+DBFLAGS = -g
+LIBS = -lnet -lpcap
 TARGET = arpspoof
 
 arpspoof: arpspoof.c
 	$(CC) arpspoof.c -o $(TARGET) $(LIBS) $(CFLAGS)
 	strip $(TARGET)
+
+debug:
+	$(CC) arpspoof.c -o $(TARGET) $(LIBS) $(CFLAGS) $(DBFLAGS)
 
 clean:
 	rm $(TARGET)
