--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,13 +1,16 @@
 bin_PROGRAMS = arpspoof synflood
 
-arpspoof_CFLAGS = -Wall -O2 -g
-arpspoof_LDADD  = -lnet -lpcap
+LDADD  = -lnet -lpcap
+AM_CFLAGS = -Wall -O2 -g
+
 arpspoof_SOURCES = arpspoof.c \
+		   arp_utils.h \
 		   arp_utils.c \
+		   utils.h \
 		   utils.c
 
-synflood_CFLAGS = -Wall -O2 -g
-synflood_LDADD  = -lnet -lpcap
 synflood_SOURCES = synflood.c \
+		   arp_utils.h \
 		   arp_utils.c \
+		   utils.h \
 		   utils.c
